fix margin on mobile

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+  margin: 10px;
+}
+
 img {
   pointer-events: none;
 }
